Windows configuration info and helpful scripts
this commit adds Windows compilation instructions and Scripts needed to properly compile and install the plugin:

* win.lxml2fix.bat - it creates a symlink in the MSYS2's include folder
* win.apply.bat - it copies *.ui files and executable into correct places

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # assembled binaries
 vera_tileset
+*.exe
 *.o
 
 # vim stuff
@@ -12,3 +13,6 @@ stats/*
 
 # ctags
 tags
+
+# MSYS2 gimptool-2.0 output
+win.localcomp.sh
